# KnowledgeBeast

./: .dockerignore  .env.example  .env.production.template  .gitignore  AGENT_WORKFLOW_PLAN.md  AUTONOMOUS_WORKFLOW_COMPLETE.md  BENCHMARK_REPORT.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_REVIEW.md  CONTRIBUTING.md  DOCKER_SETUP_SUMMARY.md  DOCUMENTATION_SUMMARY.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  MULTIMODAL_IMPLEMENTATION_SUMMARY.md  Makefile  OBSERVABILITY_IMPLEMENTATION.md  ORCHESTRATOR_AGENT.md  PROJECT_COMPLETION_REPORT.md  README.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.2.0.md  RELIABILITY_IMPLEMENTATION.md  SECURITY.md  SUMMARY.md  TEST_SUITE_SUMMARY.md  WEEK1_COMPLETION_REPORT.md  WEEK2_VERIFICATION_REPORT.md  docker-compose.dev.yml  docker-compose.yml  kb_projects.db  projects.db  pyproject.toml  requirements-dev.txt  requirements.txt  test_real_world.py
.claude/: API_V2_FIX_SUMMARY.md  E2E_AUTONOMOUS_TESTING_PLAN.md  PRODUCTION_READINESS_CHECKLIST.md  cleanup.sh  launch_phase1_agents.sh  launch_phase2_agents.sh  launch_phase3_agents.sh  launch_v2.3.1_FINAL.sh  launch_v2.3.1_agents.sh  mcp_agent_plan.md  memory.md  path_to_100.md  phase1_production_excellence.md  phase2_advanced_rag.md  phase3_v2.3.0_plan.md  v2.3.0_improvements_plan.md  v2.3.0_roadmap.md  v2.3.1_FINAL_PLAN.md  v2.3.1_LAUNCH_NOW.md  v2.3.1_agent_workflow.md  v2.3.1_completion_plan.md  v2.3.1_plan_review.md  v2.3.1_quick_start.md
archive/: AGENT_STATUS_REPORT.md  AUTONOMOUS_EXECUTION_COMPLETE.md  CODE_REVIEW.md  README.md
deployments/: README.md  docker-compose.observability.yml
docker/: Dockerfile.production  docker-compose.prod.yml  entrypoint.sh
docs/: BACKENDS.md  CURRENT_SESSION.md  DOCKER.md  FAQ.md  PROJECT.md  ROADMAP.md  TECHNICAL.md  Week4-Refactoring-Summary.md
examples/: README.md  (+7 more)
(+215 files in other folders)
